data/derived/fa15/progs/unify/prog1283.ml.out
Characters 319-321:
  del x (union (f1 f2))
                ^^
Error: This expression has type string set
       This is not a function; it cannot be applied.
